[gd_scene load_steps=8 format=3 uid="uid://dhxy2s16fiqxk"]

[ext_resource type="Script" path="res://scripts/menus/start/main_menu.gd" id="1_7anmh"]
[ext_resource type="PackedScene" uid="uid://g8jvc2c5qrvd" path="res://scenes/scene_trans_anim.tscn" id="2_8a4p8"]
[ext_resource type="Texture2D" uid="uid://cctva81bmtic2" path="res://assets/images/Main_Menu.png" id="2_ljehu"]
[ext_resource type="Texture2D" uid="uid://cly2olfgs3m28" path="res://assets/images/Main_Menu_Play.png" id="4_ydcjd"]
[ext_resource type="Texture2D" uid="uid://3dutnrbieojy" path="res://assets/images/Main_Menu_Settings.png" id="5_xsa6o"]
[ext_resource type="Texture2D" uid="uid://3dbbfyobxsc6" path="res://assets/images/Main_Menu_Quit.png" id="6_y8bvd"]
[ext_resource type="Texture2D" uid="uid://bwbaj3koup6dq" path="res://assets/images/Main_Menu_Title.png" id="7_kutly"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7anmh")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ljehu")

[node name="EludeElixir_text" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 188.0
offset_top = 143.0
offset_right = 604.0
offset_bottom = 343.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("7_kutly")

[node name="PlayButton" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 257.0
offset_top = 279.0
offset_right = 417.0
offset_bottom = 339.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("4_ydcjd")
stretch_mode = 0

[node name="SettingsButton" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 269.0
offset_top = 320.5
offset_right = 429.0
offset_bottom = 390.5
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("5_xsa6o")

[node name="QuitButton" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 263.0
offset_top = 363.0
offset_right = 423.0
offset_bottom = 435.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("6_y8bvd")

[node name="SceneTransAnim" parent="." instance=ExtResource("2_8a4p8")]
metadata/_edit_lock_ = true

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
